--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>quick filter table plug-in</title>
 	<meta content="JQuery plugin table">
 	<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
-	<link rel="stylesheet" href="example.css">
+	<link rel="stylesheet" href="stylesheets/example.css">
 	
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 	<script src="../pbTable.min.js"></script>
