--- a/example/index.html
+++ b/example/index.html
@@ -70,7 +70,7 @@
 				<thead>
 					<tr>
 						<th class="col-md-2">Nro</th>
-						<th class="col-md-2">Procer</th>
+						<th class="col-md-2">Super-Heroe</th>
 						<th class="col-md-9">Dscripci&oacute;n</th>
 						<th hidden>Sexo</th>
 					</tr>
