--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="stylesheets/example.css">
 	
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-	<script src="../pbTable.min.js"></script>
+	<script src="javascripts/pbTable.min.js"></script>
 	<script>
 		$(document).ready(function(e) {
 			$('#tablaDatos').pbTable({
