--- a/example/index.html
+++ b/example/index.html
@@ -70,8 +70,8 @@
 				<thead>
 					<tr>
 						<th class="col-md-2">Nro</th>
-						<th class="col-md-2">Super-Heroe</th>
-						<th class="col-md-9">Dscripci&oacute;n</th>
+						<th class="col-md-2">Super-Héroe</th>
+						<th class="col-md-9">Descripci&oacute;n</th>
 						<th hidden>Sexo</th>
 					</tr>
 				</thead>
