--- a/example/index.html
+++ b/example/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="example.css">
 	
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 	<script src="../pbTable.js"></script>
 	<script>
 		$(document).ready(function(e) {
@@ -16,6 +17,8 @@
 				sortable:true,
 				toolbar:{
 					enabled:true,
+					idToAppend:'PieroBlundaDiv',
+					selectedClass:'warning',
 					filterBox:true,
 					tags:[
 						  {
@@ -53,6 +56,7 @@
 			});
 		});
 	</script>
+	
 </head>
 
 <body>
@@ -66,6 +70,8 @@
 			</div>
 			<p>&nbsp;</p>
 		
+			<div id="PieroBlundaDiv"></div>
+			
 			<table id="tablaDatos" class="table table-striped">
 				<thead>
 					<tr>
@@ -304,5 +310,6 @@ $('#tablaDatos').pbTable({
 			Desarrollado por <a href="http://codement.com/CV/Piero-Blunda.html">Piero Blunda</a> | Nov-2013 | Rosario - Argentina
 		</footer>
 	</div>
+	
 </body>
 </html>
